record jetty configuration